--- a/app/favorites.html
+++ b/app/favorites.html
@@ -183,7 +183,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12 d-flex align-items-center flex-wrap">
-              <p>Benutzer: 123 | Anbieter: 312 | Ausstellungen: 455</p>
+              <p>Benutzer: 13 | Anbieter: 5 | Ausstellungen: 14</p>
               <div class="contact-item">Kontakt: info@fairmaster.de</div>
             </div>
           </div>
@@ -196,9 +196,9 @@
               <a href="index.html" class="logo">fairmaster.de</a>
               <form method="post" class="form-search">
                 <label>
-                  <input type="text" placeholder="Suche....." name="search">
+                  <input type="text" class="form-control" placeholder="Suche....." name="search">
                 </label>
-                <button type="submit" class="btn">
+                <button type="submit" class="btn btn-primary">
                   <svg class="svg-icon">
                     <use xlink:href="img/sprite.svg#search"></use>
                   </svg>
@@ -206,7 +206,7 @@
               </form>
 
               <div class="header-box">
-                <a href="user.html" class="header-box__links">Login</a>
+                <a href="user.html" class="header-box__links">Anmelden</a>
                 <a href="#" class="header-box__links">Registrieren</a>
               </div>
 
@@ -398,8 +398,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="dropdown-item-menu"><a href="#">Handwerker &<br>
-                  Meister</a>
+                <li class="dropdown-item-menu"><a href="#">Handwerker & <br>Gewerbebetriebe</a>
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
@@ -463,8 +462,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="dropdown-item-menu"><a href="#">Kunstler &<br>
-                  Sammlerstücke</a>
+                <li class="dropdown-item-menu"><a href="#">Freiberufler & <br>Dienstleister</a>
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
@@ -528,8 +526,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="dropdown-item-menu"><a href="#">Dienstleister &<br>
-                  Freiberufler</a>
+                <li class="dropdown-item-menu"><a href="#">Künstler & <br>Designer</a>
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
@@ -593,8 +590,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="dropdown-item-menu"><a href="#">Meisterklasse & <br>
-                  Kreativbedarf</a>
+                <li class="dropdown-item-menu"><a href="#">Kreativbedarf & <br>Sammlerbörse</a>
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
@@ -728,14 +724,144 @@
                       </div>
                       <div class="price">99,99 Euro <span>/ Stunde</span></div>
                     </div>
-                    <div class="card-product__content">
-                      <div class="box-text">
-                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-                          invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
-                          accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
-                          sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur </p>
+<!--                    <div class="card-product__content">-->
+<!--                      <div class="box-text">-->
+<!--                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor-->
+<!--                          invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et-->
+<!--                          accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata-->
+<!--                          sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur </p>-->
+<!--                      </div>-->
+<!--                    </div>-->
+                    <div class="card-product__footer">
+                      <div class="profile-info__head">
+                        <a href="#" class="profile-info__links links-favorite">
+                          <svg class="svg-icon">
+                            <use xlink:href="img/sprite.svg#heart"></use>
+                          </svg>
+                          <span>Merken |</span>
+                        </a>
+                        <a href="#" class="profile-info__links">
+                          <svg class="svg-icon">
+                            <use xlink:href="img/sprite.svg#user"></use>
+                          </svg>
+                          <span>Zu dem Anbieter</span>
+                        </a>
                       </div>
                     </div>
+                  </div>
+                </div>
+                <div class="card-product">
+                  <a href="#" class="card-product__img"><img src="img/public1.jpeg" alt=""></a>
+                  <div class="card-product__body">
+                    <div class="card-product__head">
+                      <div class="card-product__sub-box">
+                        <h3>Fliesen legen</h3>
+                        <div class="rating-wrapper">
+                          <ul class="list-rating">
+                            <li>
+                              <svg class="svg-icon">
+                                <use xlink:href="img/sprite.svg#star"></use>
+                              </svg>
+                            </li>
+                            <li>
+                              <svg class="svg-icon">
+                                <use xlink:href="img/sprite.svg#star"></use>
+                              </svg>
+                            </li>
+                            <li>
+                              <svg class="svg-icon">
+                                <use xlink:href="img/sprite.svg#star"></use>
+                              </svg>
+                            </li>
+                            <li>
+                              <svg class="svg-icon">
+                                <use xlink:href="img/sprite.svg#star"></use>
+                              </svg>
+                            </li>
+                            <li>
+                              <svg class="svg-icon">
+                                <use xlink:href="img/sprite.svg#star"></use>
+                              </svg>
+                            </li>
+                          </ul>
+                          <div class="rating-val">(32)</div>
+                        </div>
+                      </div>
+                      <div class="price">99,99 Euro <span>/ Stunde</span></div>
+                    </div>
+                    <!--                    <div class="card-product__content">-->
+                    <!--                      <div class="box-text">-->
+                    <!--                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor-->
+                    <!--                          invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et-->
+                    <!--                          accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata-->
+                    <!--                          sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur </p>-->
+                    <!--                      </div>-->
+                    <!--                    </div>-->
+                    <div class="card-product__footer">
+                      <div class="profile-info__head">
+                        <a href="#" class="profile-info__links links-favorite">
+                          <svg class="svg-icon">
+                            <use xlink:href="img/sprite.svg#heart"></use>
+                          </svg>
+                          <span>Merken |</span>
+                        </a>
+                        <a href="#" class="profile-info__links">
+                          <svg class="svg-icon">
+                            <use xlink:href="img/sprite.svg#user"></use>
+                          </svg>
+                          <span>Zu dem Anbieter</span>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="card-product">
+                  <a href="#" class="card-product__img"><img src="img/public1.jpeg" alt=""></a>
+                  <div class="card-product__body">
+                    <div class="card-product__head">
+                      <div class="card-product__sub-box">
+                        <h3>Fliesen legen</h3>
+                        <div class="rating-wrapper">
+                          <ul class="list-rating">
+                            <li>
+                              <svg class="svg-icon">
+                                <use xlink:href="img/sprite.svg#star"></use>
+                              </svg>
+                            </li>
+                            <li>
+                              <svg class="svg-icon">
+                                <use xlink:href="img/sprite.svg#star"></use>
+                              </svg>
+                            </li>
+                            <li>
+                              <svg class="svg-icon">
+                                <use xlink:href="img/sprite.svg#star"></use>
+                              </svg>
+                            </li>
+                            <li>
+                              <svg class="svg-icon">
+                                <use xlink:href="img/sprite.svg#star"></use>
+                              </svg>
+                            </li>
+                            <li>
+                              <svg class="svg-icon">
+                                <use xlink:href="img/sprite.svg#star"></use>
+                              </svg>
+                            </li>
+                          </ul>
+                          <div class="rating-val">(32)</div>
+                        </div>
+                      </div>
+                      <div class="price">99,99 Euro <span>/ Stunde</span></div>
+                    </div>
+                    <!--                    <div class="card-product__content">-->
+                    <!--                      <div class="box-text">-->
+                    <!--                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor-->
+                    <!--                          invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et-->
+                    <!--                          accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata-->
+                    <!--                          sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur </p>-->
+                    <!--                      </div>-->
+                    <!--                    </div>-->
                     <div class="card-product__footer">
                       <div class="profile-info__head">
                         <a href="#" class="profile-info__links links-favorite">
