--- a/app/search.html
+++ b/app/search.html
@@ -689,7 +689,7 @@
                     </label>
                   </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-3">
                   <label class="label-inp"><input type="text" placeholder="Was suchen Sie?" name=""></label>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
@@ -700,6 +700,13 @@
                     <span>bis</span>
                     <label><input type="text" placeholder="(€)"></label>
                   </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-1">
+                  <button type="submit" class="btn btn-danger btn-lg">
+                    <svg class="svg-icon">
+                      <use xlink:href="img/sprite.svg#search"></use>
+                    </svg>
+                  </button>
                 </div>
 <!--                <div class="col-12 col-lg-6">-->
 <!--                  <select name="select" class="select-drop">-->
@@ -788,12 +795,12 @@
                           <div class="price">99,99 Euro <span>/ Stunde</span></div>
                         </div>
                         <div class="card-product__content">
-                          <div class="box-text">
-                            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-                              invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
-                              accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
-                              sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur </p>
-                          </div>
+<!--                          <div class="box-text">-->
+<!--                            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor-->
+<!--                              invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et-->
+<!--                              accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata-->
+<!--                              sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur </p>-->
+<!--                          </div>-->
                         </div>
                         <div class="card-product__footer">
                           <div class="profile-info__head">
